# Pico-w-ble-keyboard

./: CMakeLists.txt  CMakeLists_key.txt  README.md  demo.c  hid_keyboard_demo.c  hog_keyboard_demo.h  pico_w_ble_keyboard.c  pico_w_ble_keyboard_key.c  sm_pairing_peripheral.h  test_ble.c
